--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-table": "^8.15.3",
     "@tremor/react": "^3.15.0",
     "@uploadthing/react": "^6.4.2",
     "class-variance-authority": "^0.7.0",
