--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@uploadthing/react": "^6.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^1.0.0",
+    "cmdk": "^0.2.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.1",
     "input-otp": "^1.2.4",
@@ -53,6 +53,7 @@
     "next": "14.0.4",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
@@ -68,6 +69,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
