--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
     "@tanstack/react-table": "^8.15.3",
     "@tremor/react": "^3.15.0",
     "@uploadthing/react": "^6.4.2",
@@ -59,6 +61,7 @@
     "react-hook-form": "^7.51.2",
     "react-resizable-panels": "^2.0.16",
     "sonner": "^1.4.41",
+    "stripe": "^15.3.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.8.0",
